vpc.tf
# vpc

resource "aws_vpc" "default" {
  cidr_block           = "${var.vpc_cidr}"
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags {
    name    = "${var.resource_name}-vpc"
    billing = "${var.billing}"
  }
}
